2008-11-07  Eric Butler  <eric@extremeboredom.net>
	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Don't explode
	in Timeout callback if the BaseXmlEditorExtension was disposed.

2008-11-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlMultipleClosingTagCompletionData.cs:
	Add additional closing elements to the completion list for all parent
	elements, that also close all intermediate elements.

	* Makefile.am:
	* MonoDevelop.XmlEditor.mdp: Updated.

2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fix build dependencies.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor.addin.xml: Bump MD version.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Added new helper
	method.

2008-10-24  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XDom.cs:
	* MonoDevelop.Xml.StateEngine/Parser.cs:
	* MonoDevelop.Xml.StateEngine/XmlTagState.cs:
	* MonoDevelop.Xml.StateEngine/XmlCDataState.cs:
	* MonoDevelop.Xml.StateEngine/XmlDocTypeState.cs:
	* MonoDevelop.Xml.StateEngine/XmlCommentState.cs:
	* MonoDevelop.Xml.StateEngine/XmlAttributeState.cs:
	* MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs:
	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	* MonoDevelop.Xml.StateEngine/XmlProcessingInstructionState.cs: Changed
	Xml StateEngine from offset-based positions to line/column positions.

2008-10-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XDom.cs: Fix recursive enumerables. Fix
	bug that prevented tree being built.

	* MonoDevelop.Xml.StateEngine/Parser.cs: Make line, col accessible.
	Write out errors in debug string.

2008-10-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlTagState.cs: Catch multiple root nodes.
