@@ -1,3 +1,9 @@
+2008-11-11  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Track fix in text
+	editor's completion line/col indexing. It's now 1-indexed, as it
+	should be.
+
 2008-11-07  Eric Butler  <eric@extremeboredom.net>
 	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Don't explode
 	in Timeout callback if the BaseXmlEditorExtension was disposed.
